crash in movie clip editor #45017

Closed
opened 2015-06-10 16:21:26 +02:00 by Steve · 9 comments

System Information
windows 8.1 asus strix 780 6gb

Blender Version
2.74 000dfc0
2.74-45d4fad
2.74-f553aba
Short description of error
Blender crash after choose track marker in pie menu
Exact steps for others to reproduce the error
In movie clip editor press E (open pie menu) and press track markers ( 4, 6) and blender will crash
Video10.avi

**System Information** windows 8.1 asus strix 780 6gb **Blender Version** 2.74 000dfc0 2.74-45d4fad 2.74-f553aba **Short description of error** Blender crash after choose track marker in pie menu **Exact steps for others to reproduce the error** In movie clip editor press E (open pie menu) and press track markers ( 4, 6) and blender will crash [Video10.avi](https://archive.blender.org/developer/F188965/Video10.avi)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @SteveKomisov

Added subscriber: @SteveKomisov

Added subscriber: @mont29

Added subscriber: @mont29

Sorry, but I cannot confirm any crash here…

  • Does it happen with any kind of video?
  • Does it happen if you start blender in factory settings (--factory-startup commandline option) and only enable Pie menu addons?
  • Do you need to have defined markers, or to have no defined markers, to reproduce the bug?
Sorry, but I cannot confirm any crash here… * Does it happen with any kind of video? * Does it happen if you start blender in factory settings (`--factory-startup` commandline option) and only enable Pie menu addons? * Do you need to have defined markers, or to have no defined markers, to reproduce the bug?
Author

U dont need to set video, just open new blend file and go to clip editor and press E choose "track markers"
Yes it happens in factory settings and only pie menu addon.
No. I dont need any markers in scene.
p.s. attach video file with crash in first masage.

U dont need to set video, just open new blend file and go to clip editor and press E choose "track markers" Yes it happens in factory settings and only pie menu addon. No. I dont need any markers in scene. p.s. attach video file with crash in first masage.

OK thanks, can confirm, issue arise when there is no clip loaded actually… checking on this one.

OK thanks, can confirm, issue arise when there is no clip loaded actually… checking on this one.
Bastien Montagne self-assigned this 2015-06-10 17:14:04 +02:00
Author

Always glad to help!

Always glad to help!

This issue was referenced by 825892ae7a

This issue was referenced by 825892ae7aab423124ee39524ca0278e8ba8633b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45017
No description provided.