Fix T45017: Crash when running 'track markers' operator with no clip loaded.

CLIP_OT_track_markers was missing a poll callback.