source/blender/editors/space_clip/clip_editor.c
@@ -219,7 +219,10 @@ int ED_space_clip_get_clip_frame_number(SpaceClip *sc)
 {
 	MovieClip *clip = ED_space_clip_get_clip(sc);
 
-	return BKE_movieclip_remap_scene_to_clip_frame(clip, sc->user.framenr);
+	if (clip) {
+		return BKE_movieclip_remap_scene_to_clip_frame(clip, sc->user.framenr);
+	}
+	return 0;
 }
 
 ImBuf *ED_space_clip_get_buffer(SpaceClip *sc)
